# eagle-libc

./: .gitignore  .travis.yml  AUTHORS  Makefile.am  README.md  configure.ac
include/: stddef.h
src/: Makefile.am
test/: Makefile.am
test/helloworld/: Makefile.am  helloworld  helloworld.c
